2003-03-26  Tim Waugh  <twaugh@redhat.com>

	* opt/183.xml, opt/184.xml: Fix conflicts with opt/162.xml.

2003-03-24  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Generic-ZjStream_Printer.xml,
	  printer/Minolta-magicolor_2200_DL.xml: Added generic Zenograohics
	  Zj stream printer and Minolta magicolor 2200 DL.

	* driver/foo2zjs.xml, opt/foo2zjs*.xml: Updated for newest version
	  of the "foo2zjs" driver: Added paper tray selection and N-up
	  printing.

2003-03-22  Till Kamppeter <till.kamppeter@gmx.net>

	* README, USAGE: Updated for Foomatic 3.0.0beta2 (new
	  auto-detection tags, insertion of arbitrary PPD lines, boolean
	  options as memebers of composite options).

2003-03-10  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Epson-EPL-6100L.xml: Fixed link, it must point to the
	  Epson EPL-6100.
	
2003-03-07  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-OfficeJet_71??.xml, printer/HP-PSC_12??.xml,
	  printer/HP-PhotoSmart_7345.xml: Added new printer models.

	* printer/HP-OfficeJet_D155.xml: Text xorrection.

	* opt/epsonepl-PrintoutMode.xml: Corrected resolutions.

2003-03-06  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Minolta-magicolor_2300_DL.xml: Added the Minolta/QMS
	  magicolor 2300 DL.
	
	* printer/HP-LaserJet_1000.xml: Let "foo2zjs" be the recommended
	  driver for the HP LaserJet 1000. Re-rated the printer to
	  "Mostly".
	
	* driver/foo2zjs.xml, opt/foo2zjs-*.xml, driver/pbmtozjs.xml,
	  printer/Generic-GDI_Printer.xml: Added "foo2zjs" driver for
	  Zenographics-based printers.
	
	* printer/Epson-EPL-6100.xml, printer/Epson-EPL-6100L.xml,
	  printer/Epson-EPL-6100PS.xml, printer/Epson-AcuLaser_C8600.xml
	  printer/Epson-AcuLaser_C8600PS.xml, driver/epl6100.xml,
	  driver/alc8600.xml, driver/pxlmono.xml, driver/Postscript.xml,
	  driver/lj5gray.xml, driver/lj5mono.xml, driver/ljet4.xml,
	  opt/2.xml, opt/6.xml, opt/145.xml, opt/159.xml, opt/160.xml,
	  opt/eplXXXX-*.xml, pxlmono-GSResolution.xml,