@@ -1,19 +1,0 @@
-<printer id="printer/522002">
-  <make>Epson</make>
-  <model>Stylus B/W 820</model>
-  <mechanism>
-    <inkjet/><!--not "color"-->
-    <resolution>
-      <dpi>
-      <!--x unknown--><!--y unknown--></dpi>
-    </resolution>
-    <consumables>
-    <!--no comments--><!--one or more "partno" elements.--></consumables>
-  </mechanism><!--no "url"-->
-  <lang>
-    <proprietary/>
-  <!--no pjl--><!--No "text"?--></lang>
-  <autodetect>
-  <!--no known parport probe information--></autodetect><!--Unknown "functionality"--><!--unknown preferred "driver"-->
-  <unverified/>
-<!--no "contrib_url"--><!--no comments!--></printer>
