@@ -1,3 +1,11 @@
+2003-03-27  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/314601.xml, printer/322185.xml, printer/336297.xml,
+	  printer/364585.xml, printer/520178.xml, printer/522002.xml,
+	  printer/527506.xml, printer/541906.xml, printer/611890.xml,
+	  printer/628498.xml, printer/628690.xml: Removed broken printer
+	  entries from old PostGreSQL times.
+
 2003-03-26  Tim Waugh  <twaugh@redhat.com>
 
 	* opt/183.xml, opt/184.xml: Fix conflicts with opt/162.xml.
